Added Timestamps as Strings for booking
